# admin/swagger/swagger.yaml
@@ -24,6 +24,15 @@ definitions:
     required:
     - user_todo_title
     type: object
+  api.findUserTodo:
+    properties:
+      user_id:
+        description: 用户id
+        type: string
+      user_todo_id:
+        description: 用户Todo id
+        type: string
+    type: object
   response.Result:
     properties:
       code:
@@ -58,6 +67,27 @@ paths:
           schema:
             $ref: '#/definitions/response.Result'
       summary: 添加新的UserTodo
+      tags:
+      - UserTodo
+  /api/v1/todo/user_todo_id:
+    delete:
+      parameters:
+      - description: 删除一个todo
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/api.findUserTodo'
+      responses:
+        "200":
+          description: '{Code: 200, Msg: "请求成功", Data: "0"}'
+          schema:
+            $ref: '#/definitions/response.Result'
+        "500":
+          description: '{Code: 500, Msg: "服务器内部错误", Data: "服务器内部错误"}'
+          schema:
+            $ref: '#/definitions/response.Result'
+      summary: 删除一个UserTodo数据
       tags:
       - UserTodo
 swagger: "2.0"
